[package]
name = "nemo"
version = "0.1.0"
edition = "2021"

[lib]
name = "nemo"
path = "src/lib.rs"

[[bin]]
name = "nemo"
path = "src/main.rs"


[dependencies]
auth-git2 = "0.5.4"
claim = "0.5.0"
clap = "4.5.4"
git2 = "0.18.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = {version = "1.37.0", features = ["full"]}
url = "2.5.0"
walkdir = "2.5.0"
