[package]
name = "pont"
version = "0.1.1"
authors = ["Mircea Teodor Oprea <mircea@mirceaoprea.net>"]
license = "MIT"
description = "A project template tool that works with Git repositories and local directories."
repository = "https://github.com/soupdevsolutions/pont"
edition = "2021"
rust-version = "1.77"
keywords = ["template", "project"]
categories = ["development-tools"]
homepage = "https://soup.dev/pont"

[lib]
name = "pont"
path = "src/lib.rs"

[[bin]]
name = "pont"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.82"
auth-git2 = "0.5.4"
claim = "0.5.0"
clap = "4.5.4"
git2 = "0.18.3"
globset = "0.4.14"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.59"
url = "2.5.0"
walkdir = "2.5.0"
